added bra ket but still need fix