@@ -1,12 +1,21 @@
 ThisBuild / version := "0.1.0-SNAPSHOT"
-
 ThisBuild / scalaVersion := "3.4.0"
-Test / javaOptions ++= Seq(
-  "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
-  "-Dio.netty.tryReflectionSetAccessible=true"
-)
+
 lazy val root = (project in file("."))
   .settings(
-    name := "Quantum"
+    name := "Quantum",
+    // Recommended compiler options for Scala 3
+    scalacOptions ++= Seq(
+      "-deprecation",
+      "-feature",
+      "-unchecked"
+    )
   )
-libraryDependencies += "org.scalatest" %% "scalatest" % "3.2.19" % Test
+libraryDependencies ++= Seq(
+  // Core numerical computing
+  "org.scalanlp" %% "breeze" % "2.1.0",
+
+  // Optional visualization (LGPL licensed)
+  "org.scalanlp" %% "breeze-viz" % "2.1.0",
+  "org.scalanlp" %% "breeze" % "2.1.0",
+)
